; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_jfs_extent.c_extHint.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/jfs/extr_jfs_extent.c_extHint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { %struct.super_block* }
%struct.super_block = type { i32 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }

@POFFSET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"extHint: corrupt xtree\00", align 1
@EIO = common dso_local global i32 0, align 4
@XAD_NOTRECORDED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @extHint(%struct.inode* %0, i32 %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca %struct.inode*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_7__*, align 8
  %7 = alloca %struct.super_block*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %6, align 8
  %14 = load %struct.inode*, %struct.inode** %4, align 8
  %15 = getelementptr inbounds %struct.inode, %struct.inode* %14, i32 0, i32 0
  %16 = load %struct.super_block*, %struct.super_block** %15, align 8
  store %struct.super_block* %16, %struct.super_block** %7, align 8
  %17 = load %struct.super_block*, %struct.super_block** %7, align 8
  %18 = call %struct.TYPE_8__* @JFS_SBI(%struct.super_block* %17)
  %19 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %8, align 4
  store i32 0, i32* %10, align 4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %22 = call i32 @XADaddress(%struct.TYPE_7__* %21, i32 0)
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* @POFFSET, align 4
  %25 = xor i32 %24, -1
  %26 = and i32 %23, %25
  %27 = load %struct.super_block*, %struct.super_block** %7, align 8
  %28 = call %struct.TYPE_8__* @JFS_SBI(%struct.super_block* %27)
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = ashr i32 %26, %30
  %32 = load i32, i32* %8, align 4
  %33 = sub nsw i32 %31, %32
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %9, align 4
  %35 = icmp slt i32 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %3
  br label %75

37:                                               ; preds = %3
  %38 = load %struct.inode*, %struct.inode** %4, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @xtLookup(%struct.inode* %38, i32 %39, i32 %40, i32* %13, i32* %11, i32* %12, i32 0)
  store i32 %41, i32* %10, align 4
  %42 = load i32, i32* %10, align 4
  %43 = icmp eq i32 %42, 0
  br i1 %43, label %44, label %73

44:                                               ; preds = %37
  %45 = load i32, i32* %12, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %73

47:                                               ; preds = %44
  %48 = load i32, i32* %12, align 4
  %49 = load i32, i32* %8, align 4
  %50 = icmp ne i32 %48, %49
  br i1 %50, label %51, label %58

51:                                               ; preds = %47
  %52 = load %struct.inode*, %struct.inode** %4, align 8
  %53 = getelementptr inbounds %struct.inode, %struct.inode* %52, i32 0, i32 0
  %54 = load %struct.super_block*, %struct.super_block** %53, align 8
  %55 = call i32 @jfs_error(%struct.super_block* %54, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %56 = load i32, i32* @EIO, align 4
  %57 = sub nsw i32 0, %56
  store i32 %57, i32* %10, align 4
  br label %58

58:                                               ; preds = %51, %47
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %60 = load i32, i32* %11, align 4
  %61 = call i32 @XADaddress(%struct.TYPE_7__* %59, i32 %60)
  %62 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %63 = load i32, i32* %12, align 4
  %64 = call i32 @XADlength(%struct.TYPE_7__* %62, i32 %63)
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %66 = load i32, i32* %9, align 4
  %67 = call i32 @XADoffset(%struct.TYPE_7__* %65, i32 %66)
  %68 = load i32, i32* %13, align 4
  %69 = load i32, i32* @XAD_NOTRECORDED, align 4
  %70 = and i32 %68, %69
  %71 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %72 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %71, i32 0, i32 0
  store i32 %70, i32* %72, align 4
  br label %74

73:                                               ; preds = %44, %37
  store i32 0, i32* %10, align 4
  br label %74

74:                                               ; preds = %73, %58
  br label %75

75:                                               ; preds = %74, %36
  %76 = load i32, i32* %10, align 4
  ret i32 %76
}

declare dso_local %struct.TYPE_8__* @JFS_SBI(%struct.super_block*) #1

declare dso_local i32 @XADaddress(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @xtLookup(%struct.inode*, i32, i32, i32*, i32*, i32*, i32) #1

declare dso_local i32 @jfs_error(%struct.super_block*, i8*) #1

declare dso_local i32 @XADlength(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @XADoffset(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
